name:                suffix-array
version:             0.1.0.0
synopsis:            Simple and moderately efficient suffix array implementation
description:         A simple implementation of a suffix array, with
                     longest-common-prefix array. While not
                     asymptotically optimal, performs well in practice
                     for medium use.
homepage:            https://github.com/kadoban/suffix-array#readme
bug-reports:         https://github.com/kadoban/suffix-array/issues
license:             BSD3
license-file:        LICENSE
author:              Joshua Simmons
maintainer:          joshua.simmons@emptypath.com
copyright:           (c) 2017 Joshua Simmons
category:            Data Structures
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC==7.8.4, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.SuffixArray
                     , Data.SuffixArray.Internal
  build-depends:       array
                     , base
  default-language:    Haskell2010
  ghc-options:         -O2

executable suffix-array-exe
  hs-source-dirs:      app
  main-is:             App.hs
  build-depends:       base
                     , suffix-array
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts

benchmark suffix-array-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , criterion
                     , random
                     , suffix-array
  default-language:    Haskell2010

test-suite suffix-array-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       array
                     , base
                     , containers
                     , suffix-array
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kadoban/suffix-array
